Changed the name of css directory to static

--- a/my-app/index.html
+++ b/my-app/index.html
@@ -5,23 +5,23 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="./drool-html/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="./static/css/bootstrap.css" type="text/css" rel="stylesheet"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap">
  
-  <link href="./drool-html/css/style.css" rel="stylesheet" />
+  <link href="./static/css/style.css" rel="stylesheet"/>
   
-  <link href="./drool-html/css/responsive.css" rel="stylesheet" />
+  <link href="./static/css/responsive.css" rel="stylesheet"/>
 
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
-    <script type="text/javascript" src="./drool-html/js/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="./drool-html/js/bootstrap.js"></script>
+    <script type="text/javascript" src="./static/js/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="./static/js/bootstrap.js"></script>
     <script>
       function openNav() {
         document.getElementById("myNav").classList.toggle("menu_width")
